--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -8,17 +8,42 @@ jobs:
   test:
     timeout-minutes: 60
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        project: [chromium, firefox, webkit]
     steps:
     - uses: actions/checkout@v4
-    - uses: actions/setup-node@v4
+
+    - name: Cache node modules
+      uses: actions/cache@v4
+      id: cache-node-modules
       with:
-        node-version: lts/*
+        path: |
+          ~/.npm
+          node_modules
+        key: ${{ runner.os }}-node-${{ hashFiles('**/yarn.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-node-
+
     - name: Install dependencies
+      if: steps.cache-node-modules.outputs.cache-hit != 'true'
       run: yarn install --frozen-lockfile
+
+    - name: Cache Playwright browsers
+      uses: actions/cache@v4
+      id: cache-playwright-browsers
+      with:
+        path: ~/.cache/ms-playwright
+        key: ${{ runner.os }}-playwright-${{ hashFiles('**/package.json') }}
+        restore-keys: |
+          ${{ runner.os }}-playwright-
+
     - name: Install Playwright Browsers
+      if: steps.cache-playwright-browsers.outputs.cache-hit != 'true'
       run: yarn playwright install --with-deps
-    - name: Run Playwright tests
-      run: yarn playwright test || true
+
+    - name: Run Playwright tests for ${{ matrix.project }}
+      run: yarn playwright test --project=${{ matrix.project }}
       env:
           VALID_USER_USERNAME: ${{ secrets.VALID_USER_USERNAME }}
           LOCKED_OUT_USER_USERNAME: ${{ secrets.LOCKED_OUT_USER_USERNAME }}
@@ -30,8 +55,8 @@ jobs:
           INVALID_USER_PASSWORD: ${{ secrets.INVALID_USER_PASSWORD }}
           BASE_URL: ${{ secrets.BASE_URL }}
     - uses: actions/upload-artifact@v4
-      if: ${{ !cancelled() }}
+      if: always()
       with:
-        name: playwright-report
+        name: playwright-report-${{ matrix.project }}
         path: playwright-report/
         retention-days: 30
