--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,11 @@
 BASE_URL=
 
 # credentials
-VALID_USER=
-VALID_PASSWORD=
+VALID_USER_USERNAME=
+LOCKED_OUT_USER_USERNAME=
+PROBLEM_USER_USERNAME=
+PERFORMANCE_GLITCH_USER_USERNAME=
+ERROR_USER_USERNAME=
+VISUAL_USER_USERNAME=
+VALID_USER_PASSWORD=
+INVALID_USER_PASSWORD=
